# onboarding-agent

./: .gitignore  .mcp.json  README.md  main.py  pyproject.toml
onboarding_agent/: __main__.py  constants.py  helpers.py  knowledge_graph.py  prompts.py  resources.py  server.py
onboarding_agent/tools/: analysis.py  git_history.py  graph.py  ingest.py  search.py
