[project]
name = "onboarding-agent"
version = "0.1.0"
description = "An MCP server that onboards you to any codebase — point it at a repo and ask questions like a senior engineer who knows the project inside out."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["mcp", "onboarding", "codebase", "knowledge-graph", "developer-tools"]
dependencies = [
    "gitpython>=3.1.50",
    "mcp>=1.27.2",
]

[project.scripts]
onboarding-agent = "main:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
